[project]
name = "repl-nix-aitechinterviewer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pypdf2>=3.0.1",
    "reportlab>=4.2.5",
    "streamlit>=1.41.1",
    "twilio>=9.4.1",
]
